Початок роботи над функціональною складовою. Змінено структуру бази даних. Додано спостережники за змінами. Додано іконку додатку

--- a/AppMainFiles/AppShell.xaml
+++ b/AppMainFiles/AppShell.xaml
@@ -6,7 +6,7 @@
     xmlns:local="clr-namespace:HealthApp"
     Shell.FlyoutBehavior="Disabled"
     Title="HealthApp"
-    TitleColor="AliceBlue"
+    TitleColor="White"
     BackgroundColor="#624E88">
 
     
