--- a/App.xaml
+++ b/App.xaml
@@ -12,10 +12,12 @@
             <Style TargetType="TabBar">
                 <Setter Property="Shell.TabBarBackgroundColor"
                    Value="#624E88"/>
+                <Setter Property="Shell.TabBarForegroundColor"
+                    Value="White"/>
                 <Setter Property="Shell.TabBarTitleColor"
-                   Value="AliceBlue"/>
+                   Value="White"/>
                 <Setter Property="Shell.TabBarUnselectedColor"
-                   Value="Black" />
+                   Value="LightGray" />
             </Style>
 
             <Style TargetType="Button">
