--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -69,7 +69,7 @@
 
                     <Label
                         x:Name="currentIndexLabel"
-                        Text="XX.X"
+                        Text="{Binding BMI}"
                         TextColor="#593E99"
                         FontSize="20"
                         HorizontalTextAlignment="Center"
@@ -84,6 +84,7 @@
                         Margin="0, -5, 0, -5"
                         Padding="-5"
                         IsEnabled="True" WidthRequest="30" HeightRequest="30" CornerRadius="50"
+                        Clicked="ChangeParametersButtonClicked"
                         Grid.Row="0" Grid.Column="3">
                     </Button>
 
@@ -104,7 +105,7 @@
                         Grid.Row="2" Grid.Column="1"/>
                     <Label
                         x:Name="targetWeightLabel"
-                        Text="XX.X"
+                        Text="{Binding Target}"
                         TextColor="#593E99"
                         FontSize="20"
                         HorizontalTextAlignment="Center"
@@ -117,6 +118,7 @@
                         Padding="-5"
                         BackgroundColor="AliceBlue" TextColor="#313E77" FontSize="25"
                         IsEnabled="True" WidthRequest="30" HeightRequest="30" CornerRadius="50"
+                        Clicked="ChangeTargetButtonClicked"
                         Grid.Row="2" Grid.Column="3">
                     </Button>
 
