--- a/Pages/MedsSettings.xaml
+++ b/Pages/MedsSettings.xaml
@@ -43,8 +43,8 @@
                         <ViewCell>
                             <StackLayout Orientation="Horizontal" Padding="10">
                                 <Label Text="{Binding drug_name}" FontSize="16" FontAttributes="Bold" WidthRequest="150" TextColor="White"/>
-                                <Label Text="{Binding days_to_take}" FontSize="16" WidthRequest="50" TextColor="White"/>
-                                <Label Text="{Binding reception_hours}" FontSize="16" WidthRequest="200" TextColor="White"/>
+                                <Label Text="{Binding days_to_take}" FontSize="16" WidthRequest="40" TextColor="White"/>
+                                <Label Text="{Binding reception_hours}" FontSize="16" WidthRequest="150" MaxLines="1" LineBreakMode="TailTruncation" TextColor="White"/>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
